--- a/Inventory/Views/Main/AddSupplier.cshtml
+++ b/Inventory/Views/Main/AddSupplier.cshtml
@@ -176,7 +176,7 @@
         });
     });
                     </script>
-                    <h2>Addicionar Fornecedor</h2>
+                    <h2>Registar Fornecedor</h2>
 
 
                     @ViewBag.status
