--- a/Inventory/Views/Main/AddSupplier.cshtml
+++ b/Inventory/Views/Main/AddSupplier.cshtml
@@ -230,7 +230,7 @@ table thead tr{
                     @ViewData["fail_status"]
                     @ViewBag.delete_status
 
-                  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Addicionar Fornecedor</button>
+                  <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal">Addicionar Fornecedor</button>
 
                     <div class="modal fade" id="myModal" role="dialog">
                         <div class="modal-dialog">
