--- a/Inventory/Views/Main/Delete_Item.cshtml
+++ b/Inventory/Views/Main/Delete_Item.cshtml
@@ -7,11 +7,11 @@
 
 <table class="table">
     <tr style="background-color:#fb6d6d">
-        <th>sr.no</th>
-        <th>Item Name</th>
-        <th>Quantity</th>
-        <th>Amount</th>
-        <th>Action</th>
+        <th>ID#</th>
+        <th>produto</th>
+        <th>Quantidade</th>
+        <th>Quantia</th>
+        <th>Delete</th>
     </tr>
 
 
