--- a/Inventory/Views/Main/InvoiceDetails.cshtml
+++ b/Inventory/Views/Main/InvoiceDetails.cshtml
@@ -144,43 +144,46 @@
             <div class="main-panel">
                 <div class="content-wrapper" style="background-color:rgb(204, 202, 202)">
                     <center><h3>@ViewBag.status</h3></center><br />
-                    <center>
-                        <h3>ABC Company</h3>
-                        Address:Gandhi Nagar, Kanke Road, Ranchi<br />
-                        Phone:787037846
-                    </center>
+                    <left>
+                        <td>
+                                Ponta Geia,Rua Correia de brito
+                                <br /> Tell: +258 85 6474 687 / +258 87 6474 687<br />
+                                Email:arnaldotomo@gmail.com<br>
+                                Beira-Sofala
+                            </td>
+                    </left>
 
                     <table class="table">
                         @foreach (var v in Model.SingleMystock)
                         {
                             <tr>
-                                <td>Invoice No.: </td>
+                                <td>Nº da fatura.: </td>
                                 <td>@v.invoice</td>
                             </tr>
                             <tr>
-                                <td>Bill Date: </td>
+                                <td>Data da Compra: </td>
                                 <td>@v.bill_date</td>
                             </tr>
                             <tr>
-                                <td>Supplier Name: </td>
+                                <td>Nome do Fornecedor: </td>
                                 <td>@v.supplier_name</td>
                             </tr>
                             <tr>
-                                <td>Reciever Date: </td>
+                                <td>Data da entrega </td>
                                 <td>@v.receive_date</td>
                             </tr>
                             <tr>
-                                <td>Carry Charge: </td>
+                                <td>Carga de transporte: </td>
                                 <td>@v.carrying_charge</td>
                             </tr>
                         }
                     </table>
                     <table class="table">
                         <tr>
-                            <th>Item Name</th>
-                            <th>Qty</th>
-                            <th>Price</th>
-                            <th>Amount</th>
+                            <th>Produtos</th>
+                            <th>Quantidade</th>
+                            <th>Preço</th>
+                            <th>Quantia</th>
 
                         </tr>
                         @foreach (var m in Model.items)
@@ -197,30 +200,15 @@
                     @foreach (var t in Model.total)
                     {
 
-                        <h3>Total Amount: @t.total_order_amount</h3><br />
-                        <a href="PrintAll?a=@t.invoice_no_t" target="_blank"><input type="button" class="btn btn-primary" value="Generate PDF"></a>
-                        <a href="NewOrder"><input type="button" class="btn btn-primary" value="New Order"></a>
+                        <h3>Total Quantia: @t.total_order_amount</h3><br />
+                        <a href="PrintAll?a=@t.invoice_no_t" target="_blank"><input type="button" class="btn btn-primary" value="Generar PDF"></a>
+                        <a href="NewOrder"><input type="button" class="btn btn-primary" value="Nova Compra"></a>
                     }
 
 
 
                 </div>
-                <!-- content-wrapper ends -->
-                <!-- partial:partials/_footer.html -->
-                <footer class="footer">
-                    <div class="container-fluid clearfix">
-                        <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">
-                            Copyright © 2018
-                            <a href="http://www.surajkrsoren.tk" target="_blank">Suraj kr soren</a>. All rights reserved.
-                        </span>
-                        <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">
-                            Hand-crafted & made with
-                            <i class="mdi mdi-heart text-danger"></i>
-                        </span>
-                    </div>
-                </footer>
-                <!-- partial -->
-            </div>
+                      </div>
             <!-- main-panel ends -->
         </div>
         <!-- page-body-wrapper ends -->
