--- a/Inventory/Views/Main/Invoice.cshtml
+++ b/Inventory/Views/Main/Invoice.cshtml
@@ -4,43 +4,46 @@
 }
 
 <center><h3>@ViewBag.status</h3></center><br />
-<center>
-    <h3>ABC Company</h3>
-    Address:Gandhi Nagar, Kanke Road, Ranchi<br />
-    Phone:787037846
-</center>
+  <left>
+                        <td>
+                                Ponta Geia,Rua Correia de brito
+                                <br /> Tell: +258 85 6474 687 / +258 87 6474 687<br />
+                                Email:arnaldotomo@gmail.com<br>
+                                Beira-Sofala
+                            </td>
+                    </left>
 
 <table class="table">
     @foreach (var v in Model.SingleMystock)
     {
         <tr>
-            <td>Invoice No.: </td>
+            <td>Nº da fatura.: </td>
             <td>@v.invoice</td>
         </tr>
         <tr>
-            <td>Bill Date: </td>
+            <td>Data da Compra: </td>
             <td>@v.bill_date</td>
         </tr>
         <tr>
-            <td>Supplier Name: </td>
+            <td>Nome do Fornecedor: </td>
             <td>@v.supplier_name</td>
         </tr>
         <tr>
-            <td>Reciever Date: </td>
+            <td>Data da entrega: </td>
             <td>@v.receive_date</td>
         </tr>
         <tr>
-            <td>Carry Charge: </td>
+            <td>Carga de transporte: </td>
             <td>@v.carrying_charge</td>
         </tr>
     }
 </table>
 <table class="table">
     <tr>
-        <th>Item Name</th>
-        <th>Qty</th>
-        <th>Price</th>
-        <th>Amount</th>
+        <th>Produtos</th>
+        <th>Quantidade</th>
+        <th>Preço</th>
+        <th>Quantia</th>
 
     </tr>
     @foreach (var m in Model.items)
@@ -58,8 +61,8 @@
 {
 
     <h3>Total Amount: @t.total_order_amount</h3><br />
-    <a href="PrintAll?a=@t.invoice_no_t" target="_blank"><input type="button" class="btn btn-primary" value="Generate PDF"></a>
-    <a href="Item_Stock"><input type="button" class="btn btn-primary" value="New Order"></a>
+    <a href="PrintAll?a=@t.invoice_no_t" target="_blank"><input type="button" class="btn btn-primary" value="Generar PDF"></a>
+    <a href="Item_Stock"><input type="button" class="btn btn-primary" value="Nova Compra"></a>
 }
 
 
