--- a/Inventory/Views/Main/InvoiceDetailsCustomer.cshtml
+++ b/Inventory/Views/Main/InvoiceDetailsCustomer.cshtml
@@ -11,7 +11,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Inventory</title>
+    <title>Gestao de Estoque</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="~/vendors/iconfonts/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="~/vendors/css/vendor.bundle.base.css">
@@ -31,10 +31,10 @@
         <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
             <div class="text-center navbar-brand-wrapper d-flex align-items-top justify-content-center">
                 <a class="navbar-brand brand-logo" href="/Main/Index">
-                    <img src="~/images/logo.svg" alt="logo" />
+                    <!-- <img src="~/images/logo.svg" alt="logo" /> -->
                 </a>
                 <a class="navbar-brand brand-logo-mini" href="/Main/Index">
-                    <img src="~/images/logo-mini.svg" alt="logo" />
+                    <!-- <img src="~/images/logo-mini.svg" alt="logo" /> -->
                 </a>
             </div>
             <div class="navbar-menu-wrapper d-flex align-items-center">
@@ -306,25 +306,28 @@
             <div class="main-panel">
                 <div class="content-wrapper" style="background-color:rgb(204, 202, 202)">
                     <center><h3>@ViewBag.status</h3></center><br />
-                    <center>
-                        <h3>ABC Company</h3>
-                        Address:Gandhi Nagar, Kanke Road, Ranchi<br />
-                        Phone:787037846
-                    </center>
+                  <left>
+                        <td>
+                                Ponta Geia,Rua Correia de brito
+                                <br /> Tell: +258 85 6474 687 / +258 87 6474 687<br />
+                                Email:arnaldotomo@gmail.com<br>
+                                Beira-Sofala
+                            </td>
+                    </left>
 
                     <table class="table">
                         @foreach (var v in Model.SingleMystock)
                         {
                             <tr>
-                                <td>Invoice No.: </td>
+                                <td>Nº da fatura.: </td>
                                 <td>@v.invoice</td>
                             </tr>
                             <tr>
-                                <td>Bill Date: </td>
+                                <td>Data da Compra: </td>
                                 <td>@v.bill_date</td>
                             </tr>
                             <tr>
-                                <td>Customer Name: </td>
+                                <td>Nome do Fornecedor: </td>
                                 <td>@v.customer_name</td>
                             </tr>
                             
@@ -332,10 +335,10 @@
                     </table>
                     <table class="table">
                         <tr>
-                            <th>Item Name</th>
-                            <th>Qty</th>
-                            <th>Price</th>
-                            <th>Amount</th>
+                            <th>Produtos</th>
+                            <th>Quantidade</th>
+                            <th>Preço</th>
+                            <th>Quantia</th>
 
                         </tr>
                         @foreach (var m in Model.items)
@@ -352,29 +355,15 @@
                     @foreach (var t in Model.total)
                     {
 
-                        <h3>Total Amount: @t.total_order_amount</h3><br />
-                        <a href="PrintAllCustomerDetails?a=@t.invoice_no_tc" target="_blank"><input type="button" class="btn btn-primary" value="Generate PDF"></a>
-                        <a href="Sells"><input type="button" class="btn btn-primary" value="New Order"></a>
+                        <h3>Total total: @t.total_order_amount</h3><br />
+                        <a href="PrintAllCustomerDetails?a=@t.invoice_no_tc" target="_blank"><input type="button" class="btn btn-primary" value="Generar PDF"></a>
+                        <a href="Sells"><input type="button" class="btn btn-primary" value="Nova Compra"></a>
                     }
 
 
 
                 </div>
-                <!-- content-wrapper ends -->
-                <!-- partial:partials/_footer.html -->
-                <footer class="footer">
-                    <div class="container-fluid clearfix">
-                        <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">
-                            Copyright © 2018
-                            <a href="http://www.surajkrsoren.tk" target="_blank">Suraj kr soren</a>. All rights reserved.
-                        </span>
-                        <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">
-                            Hand-crafted & made with
-                            <i class="mdi mdi-heart text-danger"></i>
-                        </span>
-                    </div>
-                </footer>
-                <!-- partial -->
+           
             </div>
             <!-- main-panel ends -->
         </div>
