Alatarecao eita no pdf

--- a/Inventory/Views/Main/Invoice_in_pdf.cshtml
+++ b/Inventory/Views/Main/Invoice_in_pdf.cshtml
@@ -7,12 +7,13 @@
 
  <left>
                         <td>
-                                Ponta Geia,Rua Correia de brito
-                                <br /> Tell: +258 85 6474 687 / +258 87 6474 687<br />
-                                Email:arnaldotomo@gmail.com<br>
-                                Beira-Sofala
+                                <h2>Ponta Geia,Rua Correia de brito</h2>
+                                <br /><h2> Tell: +258 85 6474 687 / +258 87 6474 687</h2><br />
+                                <h2>Email:arnaldotomo@gmail.com</h2><br>
+                                <h2>Beira-Sofala</h2>
                             </td>
                     </left>
+                    <br>
 
 <table class="table">
     @foreach (var v in Model.SingleMystock)
