--- a/Inventory/Views/Main/Delete.cshtml
+++ b/Inventory/Views/Main/Delete.cshtml
@@ -1,25 +1,25 @@
 ﻿@model Inventory.Models.Item
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Deletar Produto";
 }
 
 
-<h3 style="color:#ef2222">Are you sure you want to delete this?</h3>
 <div class="container">
     <div class="row">
-        <div class="col-sm-4">
-            <h4>Student Details</h4>
+        <div class="col-sm-6">
+<h3 style="color:#ef2222">Tem certeza de que deseja excluir Esse Produto?</h3>
+            <h4>Detalhes Do produto</h4>
             <table class="table">
                 <tr>
-                    <td>Name</td>
+                    <td>Produto</td>
                     <td>@Model.item_name</td>
                 </tr>
                 <tr>
-                    <td>Email</td>
+                    <td>Preço</td>
                     <td>@Html.DisplayFor(Model => Model.price)</td>
                 </tr>
                 <tr>
-                    <td><a href="/Main/Delete_Confirmed?id=@Model.item_id"><input type="button" class="btn btn-danger" value="Delete Confirmed"></a></td>
+                    <td><a href="/Main/Delete_Confirmed?id=@Model.item_id"><input type="button" class="btn btn-danger" value="Sim, Deletar Produto"></a></td>
                 </tr>
 
             </table>
