--- a/Inventory/Views/Main/AddSupplier.cshtml
+++ b/Inventory/Views/Main/AddSupplier.cshtml
@@ -162,7 +162,7 @@ table thead tr{
                     <li class="nav-item">
                         <a class="nav-link" href="/Main/PurchaseItems">
                             <i class="menu-icon mdi mdi-backup-restore"></i>
-                            <span class="menu-title">Comprar Produtos</span>
+                            <span class="menu-title">Registar Estoque</span>
                         </a>
                     </li>
                     <li class="nav-item">
