--- a/Inventory/Views/Main/PurchaseItems.cshtml
+++ b/Inventory/Views/Main/PurchaseItems.cshtml
@@ -15,7 +15,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Comprar Produtos</title>
+    <title>Registar Produtos</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="~/vendors/iconfonts/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="~/vendors/css/vendor.bundle.base.css">
@@ -161,7 +161,7 @@ table thead tr{
                     <li class="nav-item">
                         <a class="nav-link" href="/Main/PurchaseItems">
                             <i class="menu-icon mdi mdi-backup-restore"></i>
-                            <span class="menu-title">Comprar Produtos</span>
+                            <span class="menu-title">Registar Estoque</span>
                         </a>
                     </li>
                     <li class="nav-item">
