--- a/Inventory/Views/Shared/_navabar.cshtml
+++ b/Inventory/Views/Shared/_navabar.cshtml
@@ -2,36 +2,17 @@
 <div class="row" style="width:100%">
     <header>
         <nav id='cssmenu'>
-            <div class="logo" style="width:20%"><a href="index.html">ABC Company </a></div>
+            <div class="logo" style="width:20%"><a href="">Estoque ABC </a></div>
             <div id="head-mobile"></div>
             <div class="button"></div>
-            <ul class="nav navbar-right">
+            <!-- <ul class="nav navbar-right">
                 <li class='active'><a href='#'>HOME</a></li>
                 <li>@Html.ActionLink("Purchase Item", "Item_Stock", "Main")</li>
-                <li>
-                    <a href='#'>PRODUCTS</a>
-                    <ul>
-                        <li>
-                            <a href='#'>Add Product</a>
-                            <ul>
-                                <li>@Html.ActionLink("Add Item", "Index", "Main")</li>
-                                <li><a href='#'>Sub Product</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href='#'>Product 2</a>
-                            <ul>
-                                <li><a href='#'>Sub Product</a></li>
-                                <li><a href='#'>Sub Product</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
                 <li>@Html.ActionLink("Sell Item", "Sell_Item", "Main")</li>
                 <li>@Html.ActionLink("Add Suppliers", "AddSupplier", "Main")</li>
                 <li><a href='#'>GALLERY</a></li>
                 <li><a href='#'>CONTACT</a></li>
-            </ul>
+            </ul> -->
         </nav>
     </header>
 
