--- a/Inventory/Views/Shared/_Layout.cshtml
+++ b/Inventory/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("ABC Company", "Index", "Main", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Estoque ABC", "Index", "Main", new { area = "" }, new { @class = "navbar-brand" })
             </div>*@
     @*syntax of defining htmlactionLink
         "string_name","method_name","Controller"*@
